--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-<link rel="stylesheet" href="./CSS/estilos.css">
-<link rel="stylesheet" href="./CSS/OtrosEstilos.css">
-<link rel="stylesheet" href="./CSS/Estilos|Foot.css">
+<link rel="stylesheet" href="/CSS/estilos.css">
+<link rel="stylesheet" href="/CSS/OtrosEstilos.css">
+<link rel="stylesheet" href="/CSS/Estilos|Foot.css">
 <script src="//embed.typeform.com/next/embed.js"></script>
 <script src="/JS/FUnciones.js"></script>
-    <script src="./JS/Menu-desplegable.js"></script>
+    <script src="/JS/Menu-desplegable.js"></script>
     <link rel="shortcut icon" href="./IMG/icono.png" type="image/x-icon">
     <title>AdTrackerCA</title>
 </head>
@@ -78,7 +78,7 @@
         <div class=" contenedor sm:flex sm:space-y-0 justify-center">
           <br>
             <div class="columna tamaño fade-in-box ">
-              <h1 class="">Resultados Inmediatos</h1>
+              <h1 class="amapa">Resultados Inmediatos</h1>
               <h3>La forma más fácil de hacer valer tu inversión. Descubre si tu comercial es visto o escuchado por tu target.</h3>
             </div>
             <div class="columna fade-in-box">
@@ -98,21 +98,6 @@
     <h3 class="ache3">Contamos con un universo de más de 3.1 millones de usuarios con diversas características socio demográficas</h3>
   </div>
 </div>
-</section>
-<section class="bg-white ">
-  <div class="items-center max-w-screen-xl px-4 py-8 mx-auto lg:grid lg:grid-cols-2 lg:gap-16 xl:gap-24 lg:py-12 lg:px-6">
-      <div class=" items-center textinstrumento lg:grid lg:grid-cols-1 fade-in-box ">
-        <br>
-        <br>
-        <br>
-        <h1 class="mb-2 font-extrabold    fade-in-box ">Empieza a evaluar tu campaña de forma fácil</h1>
-        <br>
-        <br>
-        <iframe width="960" height="615" src="https://www.youtube.com/embed/faJz1w1M9eA?si=ypPAKnb86vBMHKtK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        <br>
-        <br>
-        <br>
-        </div>
 </section>
 <section >
   <div class="bg-white dark:bg-gray-900 ">
@@ -264,7 +249,7 @@
           <div class="clash-card ">
           <div class="barbarian">
             <img class="tamañobronce" src="/IMG/Oro.png" alt="oro" />
-            
+         
         <br>
         <br>
         <br>
@@ -320,7 +305,6 @@
          </div>
   </section>
   </body>
-  
     <footer class="section">
       <div class="columnas">
         <div class="columna-izquierda ">
@@ -336,7 +320,6 @@
               <a href="https://www.instagram.com/unimerca/"><img src="/IMG/IG.png" alt="instagram" class="imagenes"></a>
               <a href="https://www.linkedin.com/company/unimer-el-salvador/?originalSubdomain=sv"><img src="/IMG/Linkeding.png" alt="linkedin" class="imagenes"></a>
             </div>
-            <br>
             <div>
               <h6 class="centro">® UNIMER Empresa de investigación de Mercado</h6>
               <h6 class="centro">Terminos y Condiciones</h6>
